k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: totalservice-ingress
  namespace: totalservice
spec:
  ingressClassName: nginx
  rules:
    - host: totalservice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
